# crm

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: a33719985e20_initial.py  b44829085f21_features.py  c55930196f22_fts.py
backend/app/: config.py  database.py  deps.py  exceptions.py  main.py
backend/app/models/: __init__.py  activity.py  attachment.py  employee.py  meeting.py  project.py  reference.py  user.py
backend/app/routers/: activity.py  attachments.py  auth.py  employees.py  meetings.py  projects.py  reference.py  search.py  stats.py  users.py  ws.py
backend/app/schemas/: activity.py  attachment.py  auth.py  employee.py  meeting.py  project.py  reference.py  search.py  user.py
backend/app/services/: activity.py  auth.py  cache.py  ws.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_activity.py  test_attachments.py  test_auth.py  test_employees.py  test_linking.py  test_meetings.py  test_projects.py  test_search.py  test_stats.py
frontend/: nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/hooks/: useActivity.ts  useAuth.ts  useEmployees.ts  useMeetings.ts  useProjects.ts  useReference.ts  useSearch.ts  useStats.ts  useUsers.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Activity.tsx  Dashboard.tsx  Employees.tsx  Login.tsx  Meetings.tsx  ProjectDetail.tsx  Users.tsx
(+15 files in other folders)
